test/libyul/yulSyntaxTests/for_expr_invalid_3.yul
{
	for {} 1 1 {}
}
// ----
// ParserError 2314: (12-13): Expected '{' but got 'Number'
